--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3099",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export"
@@ -33,7 +33,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.26.10",
-    "swiper": "^6.5.1",
+    "swiper": "^9.1.1",
     "swr": "^0.3.2",
     "use-onclickoutside": "^0.3.1"
   },
@@ -42,8 +42,11 @@
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "autoprefixer": "^10.4.14",
     "fslightbox-react": "^1.5.0",
     "node-fetch": "^3.1.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.6.4"
   }
 }
