--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "antd": "^5.3.2",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-redux-wrapper": "^6.0.2",
+    "qs": "^6.11.1",
     "rc-slider": "^9.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^6.8.2",
+    "react-hook-form": "^7.43.8",
+    "react-markdown": "^8.0.6",
+    "react-paginate": "^8.1.4",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
     "react-select": "^3.1.0",
+    "react-toastify": "^9.1.2",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
