--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@uiw/react-md-editor": "^3.20.5",
     "antd": "^5.3.2",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
