--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.8",
     "react-markdown": "^8.0.6",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-paginate": "^8.1.4",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
