--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.8",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-markdown": "^8.0.6",
     "react-paginate": "^8.1.4",
     "react-rater": "^5.1.1",
